compiler/acton/test/syntaxerrors/err10.act
# Missing colon after if statement
def check(x):
    if x > 0
        return True
    return False